--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Compiled class file
 *.class
 
+# Maven build directory
+target/
+
 # Log file
 *.log
 
@@ -22,3 +25,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# dotenv
+.env
+
+# target
+target/
